[tool.poetry]
name = "leetcode-solutions"
version = "0.1.0"
description = ""
authors = ["Nikhil <nravi6@asu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "leetcode_solutions"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
black = "^22.12.0"
leetscrape = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "questions"
testpaths = ["tests"]
minversion = "6.0"
addopts = "-ra -q"
